# luau-disassembler-decompiler

./: .gitignore  Cargo.toml  LICENSE  README.md  tmp_roblox.luauc
corpus/bytecode/: 01_literals.luauc  02_arith.luauc  03_if_else.luauc  04_while.luauc  05_repeat.luauc  06_numeric_for.luauc  07_generic_for.luauc  08_and_or.luauc  09_method_call.luauc  10_tables.luauc  11_varargs.luauc  12_closures.luauc  13_multiret.luauc  14_string_ops.luauc  15_globals.luauc  16_roblox.luauc  17_context.luauc  18_sibling_closures.luauc  19_multret.luauc  20_loop_control.luauc  21_guards.luauc
corpus/bytecode-stripped/: 01_literals.luauc  02_arith.luauc  03_if_else.luauc  04_while.luauc  05_repeat.luauc  06_numeric_for.luauc  07_generic_for.luauc  08_and_or.luauc  09_method_call.luauc  10_tables.luauc  11_varargs.luauc  12_closures.luauc  13_multiret.luauc  14_string_ops.luauc  15_globals.luauc  16_roblox.luauc  17_context.luauc  18_sibling_closures.luauc  19_multret.luauc  20_loop_control.luauc  21_guards.luauc
corpus/bytecode-v11/: 01_literals.luauc
corpus/expected-disasm/: 01_literals.disasm.txt  02_arith.disasm.txt  03_if_else.disasm.txt  04_while.disasm.txt  05_repeat.disasm.txt  06_numeric_for.disasm.txt  07_generic_for.disasm.txt  08_and_or.disasm.txt  09_method_call.disasm.txt  10_tables.disasm.txt  11_varargs.disasm.txt  12_closures.disasm.txt  13_multiret.disasm.txt  14_string_ops.disasm.txt  15_globals.disasm.txt  16_roblox.disasm.txt  17_context.disasm.txt  18_sibling_closures.disasm.txt  19_multret.disasm.txt  20_loop_control.disasm.txt  21_guards.disasm.txt
corpus/expected-text/: 01_literals.txt  02_arith.txt  03_if_else.txt  04_while.txt  05_repeat.txt  06_numeric_for.txt  07_generic_for.txt  08_and_or.txt  09_method_call.txt  10_tables.txt  11_varargs.txt  12_closures.txt  13_multiret.txt  14_string_ops.txt  15_globals.txt  16_roblox.txt  17_context.txt  18_sibling_closures.txt  19_multret.txt  20_loop_control.txt  21_guards.txt
corpus/src/: 01_literals.luau  02_arith.luau  03_if_else.luau  04_while.luau  05_repeat.luau  06_numeric_for.luau  07_generic_for.luau  08_and_or.luau  09_method_call.luau  10_tables.luau  11_varargs.luau  12_closures.luau  13_multiret.luau  14_string_ops.luau  15_globals.luau  16_roblox.luau  17_context.luau  18_sibling_closures.luau  19_multret.luau  20_loop_control.luau  21_guards.luau  22_short_circuit_return.luau  23_multret_method_arg.luau  24_captured_services.luau
crates/luau-bytecode/: Cargo.toml
crates/luau-bytecode/src/: error.rs  lib.rs  model.rs  opcode.rs  parse.rs  reader.rs  validate.rs
crates/luau-bytecode/tests/: reader.rs
crates/luau-decompile/: Cargo.toml
crates/luau-decompile/src/: ast.rs  cleanup.rs  lib.rs  naming.rs
crates/luau-decompile/tests/: decompile.rs  loop_structuring.rs
crates/luau-disasm/: Cargo.toml
crates/luau-disasm/src/: constant.rs  format.rs  instruction.rs  lib.rs
crates/luau-disasm/tests/: oracle.rs  snapshot.rs
crates/luau-ir/: Cargo.toml
crates/luau-ir/src/: cfg.rs  dom.rs  lib.rs
crates/luau-ir/tests/: cfg.rs
crates/luau-server/: Cargo.toml
crates/luau-server/src/: http.rs  main.rs
crates/luau-server/tests/: e2e.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
reference/: decompiler-heuristics-v2.json  decompiler-heuristics.json
release/: README.md  RELEASE_NOTES_v0.1.0.md  example.luau  luau-disassembler-v0.1.0-windows-x64.zip.sha256  smoke-test.ps1
roblox-studio-cases/: README.md  RTween_ModuleScript_Bytecode.luau  bytecode-input.template.json  studio_25_cases.luau
roblox-studio-cases/in_game/: AgentManager_ModuleScript_Bytecode.luau  Animal_ModuleScript_Bytecode.luau  Animate_Script_Bytecode.luau  Asserts_ModuleScript_Bytecode.luau  BirdHandleController_ModuleScript_Bytecode.luau  BloodEffectsController_ModuleScript_Bytecode.luau  Broomstick_ModuleScript_Bytecode.luau  BuildToolItem_ModuleScript_Bytecode.luau  BulletController_ModuleScript_Bytecode.luau  CalloutWheelController_ModuleScript_Bytecode.luau  CameraController_ModuleScript_Bytecode.luau  Camera_ModuleScript_Bytecode.luau  Caption_ModuleScript_Bytecode.luau  (+74 more)
scripts/: compile-corpus.sh  decompile-neuron.luau  package-release.ps1
(+1 files in other folders)
