[package]
name = "luau-bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Exact, validated reader for Luau bytecode (the compiled chunk). No analysis."

# This crate is the bottom of the dependency stack: it depends on nothing.
[dependencies]

[dev-dependencies]
