[package]
name = "luau-disasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Turns a parsed Luau Module into a resolved, human-readable instruction listing."

[dependencies]
luau-bytecode.workspace = true
