[package]
name = "luau-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Control-flow graph and analysis IR for the decompiler."

[dependencies]
luau-bytecode.workspace = true
luau-disasm.workspace = true
